src/assets/styles/search.css
@import url("https://fonts.googleapis.com/css2?family=Inter&display=swap");
* {
  margin: 0px;
  padding: 0px;
  /* font-family: "Inter", sans-serif; */
}
.search-component {
  max-width: 800px;
  height: 96px;
}
.title-text {
  color: #555f66;
  text-align: left;
  line-height: 16px;
  font-family: "Inter", sans-serif;
  margin-bottom: 8px;
}
.locationdetails {
  font-family: "Inter", sans-serif;
  color: #363d42;
  line-height: 24px;
}
.inputDate {
  font-family: "Inter", sans-serif;
  color: #6f787f;
  line-height: 24px;
  overflow: hidden;
}
.input-item {
  border: 0px;
  color: black;
  padding-left: 40px;
  width: 200px;
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
}
.inputDate {
  overflow: hidden !important;
}
.first-input {
}
.middle-input {
  border-left: 1px solid rgb(214, 214, 214);
  border-right: 1px solid rgb(214, 214, 214);
}
.last-input {
}
.search-field {
}
.search-details {
  position: relative;
  display: flex;
  justify-content: start;
  /* // flex-direction: column; //
    / align-items: flex-start; // */
  width: 800px;
  height: 85px;
  border-radius: 50px;
  background: white;
  margin-left: 10px;
}
.btn {
  position: absolute;
  right: 12px;
  top: 12px;
  border-radius: 50%;
  background-color: #252a2d;
  height: 64px;
  width: 64px;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}
.btn:hover {
  background-color: #485258;
  height: 68px;
  width: 68px;
  transition: background-color 0.15s ease-out;
}
input {
  border: none;
  height: 20px;
  font-size: 16px;
  width: auto;
  /* background-color: #0966d7; */
  overflow: hidden;
}
textarea:focus,
input:focus {
  outline: none;
}
.date {
  color: black;
  margin-left: 343px;
  position: absolute;
}
.mobileFlex {
  display: flex;
}
/* .positioning {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 0rem;
} */

/* // @media only screen and (max-width: 2113px) {
  
  } // */

/* .hide-date-icon::-webkit-calendar-picker-indicator {
  display: none;
}

.hide-date-icon::-webkit-inner-spin-button,
.hide-date-icon::-webkit-clear-button {
  -webkit-appearance: none;
  display: none;
} */

.input-container input {
  border: none;
  box-sizing: border-box;
  outline: 0;
  padding: 0.75rem;
  position: relative;
  width: 100%;
}

input#datein[type="date"]::-webkit-calendar-picker-indicator {
  background: transparent;
  bottom: 0;
  color: transparent;
  cursor: pointer;
  height: auto;
  left: 35%;
  position: absolute;
  right: 0;
  top: 18%;
  width: 25%;
}
input#dateOut[type="date"]::-webkit-calendar-picker-indicator {
  background: transparent;
  bottom: 0;
  color: transparent;
  cursor: pointer;
  height: auto;
  left: 65%;
  position: absolute;
  right: 0;
  top: 18%;
  width: 25%;
}
input[type="date"]::-webkit-input-placeholder {
  color: white;
}
input[type="date"]::placeholder {
  /* Edge */
  color: white;
}
input[type="date"i] {
  /* color: #0966d7; */
  background-color: white !important;
  color: black !important;
  content: "Ratul";
  background: white !important;
}
.inputPlaceholder {
  background-color: white;
  position: absolute;
  top: 36px;
  width: 120px;
  padding: 5px 0px;
  pointer-events: none;
  font-family: "Inter", sans-serif;
  color: #6f787f;
  line-height: 24px;
  font-size: 20px;
  font-weight: 400;
}
@media only screen and (max-width: 768px) {
  .search-component {
    max-width: 400px;
    /* border-radius: 50px; */
    margin-left: 0px;
  }
  .search-details {
    position: relative;
    display: block;
    justify-content: none;
    /* // flex-direction: column; //
      / align-items: flex-start; // */
    max-width: 400px;
    height: 152px;
    border-radius: 16px;
    background-color: white;
    margin-left: 10px;
  }
  .input-item {
    border: 0px;
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: center;
  }
  .first-input {
    /* border-bottom: 1px solid rgb(214, 214, 214); */
    height: 76px;
  }
  .input-item label {
    font-size: 10px;
  }
  .middle-input {
    border-right: 1px solid rgb(214, 214, 214);
    border-top: 1px solid rgb(214, 214, 214);
  }
  .last-input {
    border-top: 1px solid rgb(214, 214, 214);
  }
  .mobileFlex {
    display: flex;
    height: 76px;
  }
  input {
    border: none;
    font-size: 16px;
    /* width: auto; */
    overflow: hidden;
  }
  textarea:focus,
  input:focus {
    outline: none;
  }
  .mobile-button {
    border-radius: 999px;
    padding: 12px;
    background-color: #0966d7;
    border: 0px;
    line-height: 24px;
    font-family: "Inter", sans-serif;
    font-size: 16px;
    font-weight: 600;
    color: #ffffff;
    display: flex;
    margin-top: 16px;
  }
  .inputPlaceholder {
    background-color: white;
    position: absolute;
    top: 108px;
    width: 120px;
    padding: 5px 0px;
    pointer-events: none;
    font-family: "Inter", sans-serif;
    color: #6f787f;
    line-height: 24px;
    font-size: 20px;
    font-weight: 400;
  }
}
@media only screen and (max-width: 568px) {
}
@media only screen and (max-width: 320px) {
}

